# chess-meta

./: .gitignore  CLAUDE.md  Cargo.toml  settings.toml
.claude/: settings.json
.claude/skills/: benchmarking.md  code-organization.md  code-style.md  dependencies.md  error-handling.md  functional-patterns.md  iced-app-structure.md  iced-component-pattern.md  logging.md  naming.md  pattern-matching.md  performance.md  testing.md  type-conventions.md
benches/: cache.rs  parsing.rs  search.rs
docs/: known-issues.md  lc0-integration.md  mcts-algorithm.md  mcts-design.md  mcts-parameters.md  ui-design.md
src/: app.rs  cache.rs  config.rs  coordinator.rs  engine.rs  lib.rs  maia.rs  main.rs  position.rs  search.rs
src/coordinator/: expand.rs  mod.rs  run.rs
src/nn/: encoding.rs  mod.rs  policy_map.rs
src/search/: backprop.rs  candidates.rs  mod.rs  query.rs  selection.rs  test_helpers.rs
src/ui/: controls.rs  mod.rs  move_table.rs  progress.rs  tree_view.rs
tests/: cache_integration.rs  lc0_integration.rs  nn_smoke.rs  search_integration.rs
