[package]
name = "chess-meta"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["canvas", "tokio"] }
shakmaty = "0.27"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
toml = "0.8"
log = "0.4"
simplelog = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search"
harness = false

[features]
search-trace = []
