[package]
name = "chess-meta"
version = "0.1.0"
edition = "2024"
default-run = "chess-meta"

[dependencies]
iced = { version = "=0.14.0", features = ["canvas", "tokio"] }
shakmaty = "=0.30.0"
rusqlite = { version = "=0.38.0", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
rand = "=0.10.0"
toml = "=1.0.6"
log = "=0.4.29"
simplelog = "=0.12.2"
ort = { version = "=2.0.0-rc.12", features = ["tls-native"] }
ndarray = "=0.16.1"

[[bin]]
name = "bench_backend"
path = "src/bin/bench_backend.rs"

[dev-dependencies]
criterion = { version = "=0.8.2", features = ["html_reports"] }

[[bench]]
name = "search"
harness = false

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "parsing"
harness = false

[features]
search-trace = []
